tests/en/errors/bad_dir.salam
// EXPECT: E018
layout:
    dir = "diagonal"
end
